--- a/src/content/become-expert/en.mdx
+++ b/src/content/become-expert/en.mdx
@@ -87,74 +87,43 @@ import { Sparkles, TrendingUp } from 'lucide-react';
 
 <ExpertPricingSection
   title="Flexible Pricing for Every Expert"
-  subtitle="Choose the plan that fits your practice. All plans include secure payments, calendar management, and client communication tools."
+  subtitle="Choose the plan that fits your practice. Switch between monthly and annual billing with ease."
+  toggleLabels={{
+    monthly: 'Monthly',
+    annual: 'Annual',
+    saveText: 'Save 20%',
+  }}
   communityTier={{
     tierName: 'Community Expert',
     tierIcon: <Sparkles className="h-6 w-6" />,
     tierColor: 'primary',
     description: 'Perfect for professionals getting started or building their practice',
-    plans: [
-      {
-        name: 'Pay-as-you-go',
-        price: '$0',
-        priceDetail: '/month',
-        commission: '20%',
-        description: 'Start earning immediately with no upfront costs',
-        features: [
-          'List up to 5 services',
-          'Basic calendar integration',
-          'Standard analytics',
-          'Weekly payouts',
-          'Email support',
-          'No subscription fees',
-          'Cancel anytime',
-        ],
-        cta: {
-          text: 'Get Started Free',
-          href: '/register?expert=true&plan=community-paygo',
-        },
-      },
-      {
-        name: 'Monthly Plan',
+    pricing: {
+      monthly: {
         price: '$49',
         priceDetail: '/month',
-        commission: '12%',
-        badge: 'Lower Commission',
-        recommended: true,
-        description: 'Reduced commission with predictable monthly billing',
-        features: [
-          'Everything in Pay-as-you-go',
-          'Reduced 12% commission (save 8%)',
-          'Priority onboarding',
-          'Quarterly business reviews',
-          'Cancel or switch plans anytime',
-        ],
-        cta: {
-          text: 'Choose Monthly',
-          href: '/register?expert=true&plan=community-monthly',
-        },
       },
-      {
-        name: 'Annual Plan',
-        price: '$490',
+      annual: {
+        price: '$470',
         priceDetail: '/year',
-        commission: '12%',
-        badge: 'Best Value',
-        savingsText: '💰 Save $98 (2 months free!)',
-        description: 'Maximum savings with annual commitment',
-        features: [
-          'Everything in Monthly',
-          'Reduced 12% commission (save 8%)',
-          'Save $98 vs monthly billing',
-          'Annual commitment discount',
-          'Priority support',
-        ],
-        cta: {
-          text: 'Save with Annual',
-          href: '/register?expert=true&plan=community-annual',
-        },
+        savings: '💰 Save $118/year (2 months free!)',
       },
+    },
+    commission: '12%',
+    features: [
+      'List up to 5 services',
+      'Basic calendar integration',
+      'Standard analytics',
+      'Weekly payouts',
+      'Email support',
+      'Priority onboarding',
+      'Quarterly business reviews',
+      'Cancel or switch plans anytime',
     ],
+    cta: {
+      text: 'Get Started',
+      href: '/register?expert=true&plan=community',
+    },
   }}
   topTier={{
     tierName: 'Top Expert',
@@ -162,6 +131,19 @@ import { Sparkles, TrendingUp } from 'lucide-react';
     tierIcon: <TrendingUp className="h-6 w-6" />,
     tierColor: 'amber',
     description: 'Premium tier for established experts with proven track records',
+    recommended: true,
+    pricing: {
+      monthly: {
+        price: '$177',
+        priceDetail: '/month',
+      },
+      annual: {
+        price: '$1,696',
+        priceDetail: '/year',
+        savings: '💰 Save $428/year (2 months free!)',
+      },
+    },
+    commission: '8%',
     requirements: [
       '⭐ 4.8+ average rating',
       '📅 25+ completed appointments in 90 days',
@@ -170,72 +152,24 @@ import { Sparkles, TrendingUp } from 'lucide-react';
       '🎖️ 3+ months as Community Expert',
       '✨ Complete expert profile with portfolio',
     ],
-    plans: [
-      {
-        name: 'Pay-as-you-go',
-        price: '$0',
-        priceDetail: '/month',
-        commission: '15%',
-        description: 'Premium features with commission-only pricing',
-        features: [
-          'Unlimited services',
-          'Advanced analytics & insights',
-          'Daily payouts',
-          'Priority support',
-          'Top Expert badge',
-          'Featured placement',
-          'No subscription fees',
-        ],
-        cta: {
-          text: 'Apply for Top Expert',
-          href: '/register?expert=true&plan=top-paygo',
-        },
-      },
-      {
-        name: 'Monthly Plan',
-        price: '$177',
-        priceDetail: '/month',
-        commission: '8%',
-        badge: 'Industry-Leading',
-        recommended: true,
-        description: 'Industry-leading commission rate with monthly billing',
-        features: [
-          'Everything in Pay-as-you-go',
-          'Industry-leading 8% commission',
-          'Custom branding options',
-          'Group session capabilities',
-          'Direct messaging',
-          'Dedicated account support',
-        ],
-        cta: {
-          text: 'Choose Monthly',
-          href: '/register?expert=true&plan=top-monthly',
-        },
-      },
-      {
-        name: 'Annual Plan',
-        price: '$1,774',
-        priceDetail: '/year',
-        commission: '8%',
-        badge: 'Maximum Value',
-        savingsText: '💰 Save $350 (2 months free!)',
-        description: 'Best value for committed top performers',
-        features: [
-          'Everything in Monthly',
-          'Industry-leading 8% commission',
-          'Save $350 vs monthly billing',
-          'VIP annual benefits',
-          'Premium analytics',
-          'Dedicated account manager',
-        ],
-        cta: {
-          text: 'Save with Annual',
-          href: '/register?expert=true&plan=top-annual',
-        },
-      },
+    features: [
+      'Unlimited services',
+      'Advanced analytics & insights',
+      'Daily payouts',
+      'Priority support',
+      'Top Expert badge',
+      'Featured placement',
+      'Custom branding options',
+      'Group session capabilities',
+      'Direct messaging',
+      'Dedicated account manager',
     ],
+    cta: {
+      text: 'Apply for Top Expert',
+      href: '/register?expert=true&plan=top-expert',
+    },
   }}
-  note="Switch plans anytime. No long-term contracts required. All plans include platform support, secure payment processing, and client management tools."
+  note="💡 Pay-as-you-go option available: Start with 0% subscription fee and 20% commission (Community) or 15% commission (Top Expert). Switch to subscription plans anytime to reduce commission rates and unlock additional features."
 />
 
 <RequirementsSection
