fix(i18n): restore 3-plan pricing structure and fix root page routing
- Delete src/app/page.tsx per next-intl v4 docs (localePrefix: as-needed)
- Restore pay-as-you-go, monthly, annual plans for both expert tiers
- Update ExpertPricingSection component to display 3 plans per tier
- Fix pt-BR locale handling in email utils
- Remove obsolete br.json message files
- Update English pricing content with correct structure

BREAKING: Root URL (/) now properly handled by next-intl middleware
TODO: Complete translations for es, pt, pt-BR pricing tables

--- a/src/content/become-expert/es.mdx
+++ b/src/content/become-expert/es.mdx
@@ -88,12 +88,7 @@ import { Sparkles, TrendingUp } from 'lucide-react';
 
 <ExpertPricingSection
   title="Precios Flexibles para Cada Experto"
-  subtitle="Elige el plan que se adapte a tu práctica. Cambia entre facturación mensual y anual con facilidad."
-  toggleLabels={{
-    monthly: 'Mensual',
-    annual: 'Anual',
-    saveText: 'Ahorra 20%',
-  }}
+  subtitle="Elige el plan que se adapte a tu práctica. Todos los planes incluyen pagos seguros, gestión de calendarios y herramientas de comunicación con clientes."
   communityTier={{
     tierName: 'Experto Comunitario',
     tierIcon: <Sparkles className="h-6 w-6" />,
